@@ -1,1 +1,5 @@
 <p>1: Subst</p>
+<p>2: <b>THIS IS A TEST</b></p>
+<p>3: <b>THIS IS A TEST</b></p>
+<p>4: {{subst:Non-existent Topic}}</p>
+<p>5:  Test topic.</p>
