@@ -1,0 +1,2 @@
+<!-- used with ParserTest.testSubst() -->
+1: {{subst:Test Template}}
