@@ -1,4 +1,4 @@
-#Wed Jan 12 10:54:37 PST 2011
+#Wed Mar 02 12:37:31 PST 2011
 admin.action.refresh=Suchindex aktualisieren
 admin.action.save=\u00C4nderungen speichern
 admin.adduser.caption.adduser=Benutzer-Account hinzuf\u00FCgen
@@ -111,6 +111,7 @@ admin.parser.caption.allowhtml=Erlaube HTML
 admin.parser.caption.allowjavascript=Erlaube Javascript
 admin.parser.caption.allowtemplates=Erlaube Wiki-Vorlagen
 admin.parser.caption.interwikiinline=Interwiki Links "eingebettet" im Text anzeigen
+admin.parser.caption.numberedhtmllinks=Nummerierte HTML Links benutzen
 admin.parser.caption.signaturedate=Muster f\u00FCr das Datum in der Signatur
 admin.parser.caption.signatureuser=Muster f\u00FCr den Benutzernamen in der Signatur
 admin.parser.caption.tableofcontents=Benutzer-Inhaltsverzeichnis
@@ -118,6 +119,7 @@ admin.parser.caption.tableofcontentsdepth=Maximale Tiefe des Inhaltsverzeichniss
 admin.parser.caption.virtualwikiinline=Virtuelle Wikilinks  "eingebettet" im Text anzeigen
 admin.parser.help.allowcapitalized=Artikelnamen die am Anfang gro\u00DF- oder kleingeschrieben werden, sind als gleich anzusehen.\r\nWenn diese Option nicht ausgew\u00E4hlt wird, werden die Namen "Artikel" und "artikel" als zwei verschiedene Namen eines Wikiartikels angesehen.\r\nAuch wenn diese Option aktiviert ist, kann es verschiedene Artikelnamen geben, die sich nur in der Gro\u00DF- und Kleinschreibung unterscheiden.
 admin.parser.help.interwikiinline=Wenn diese Option ausgew\u00E4hlt wird, werden alle Interwikilinks eingebettet zusammen mit dem Artikeltext angezeigt. Wenn die Option nicht ausgew\u00E4hlt wird, werden alle Interwikilinks \r\nin einem Bereich in der linken Navigationsleiste angezeigt. (Links denen ein Doppelpunkt vorangestellt wird (Bsp.\: "[[\:interwiki\:Topic]]"), werden immer mit in den Text eingebettet).\r\nIf this option is selected then all interwiki links will be displayed inline with article text.  If it is not selected then interwiki links will be displayed in a box in the left navigation (links preceded by a colon such as "[[\:interwiki\:Topic]]" will always be displayed inline).
+admin.parser.help.numberedhtmllinks=W\u00E4hlen Sie diese Einstellung um HTML Links der Form "[http\://example.com]" in nummerierter Form (d.h. "[1]") darzustellen. Das Deaktivieren dieser Einstellung bewirkt, dass die URL als Linktext angezeigt wird.
 admin.parser.help.signaturedate=Siehe Javadoc der Klasse java.text.SimpleDateFormat f\u00FCr die zul\u00E4ssigen Muster.
 admin.parser.help.signatureuser=Schl\u00FCssel\: {0} \= Benutzerseite; {1} \= Benutzer-Beitragsseite; {2} \= Benutzer Diskussion; {3} \= Benutzerlogin; {4} \= Benutzer-Anzeigename; {5} \= Benutzer-EMail; {6} \= Benutzer ID
 admin.parser.help.tableofcontentsdepth=Setzen Sie diesen Wert von 1-6 um zu bestimmen, wie weit die \u00DCberschriften innerhalb des Inhaltsverzeichnisses\r\nverschachtelt sein d\u00FCrfen.
@@ -135,9 +137,11 @@ admin.persistence.caption=Art der Datenspeicherung
 admin.persistence.caption.driver=JDBC Treiber Klasse
 admin.persistence.caption.maxactive=Max. Anzahl aktiver Verbindungen
 admin.persistence.caption.maxidle=Max. Anzahl inaktiver Verbindingen
+admin.persistence.caption.maxopenpreparedstatements=Maximale Anzahl offener vorbereiteter Anweisungen (engl. prepared Statements)
 admin.persistence.caption.minevictableidletime=Min. Zeit\u00FCberschreitung in Sekunden bevor inaktive Verbindungen entfernt werden
 admin.persistence.caption.numtestsperevictionrun=Anzahl der Tests in einem Entfernungslauf
 admin.persistence.caption.pass=Datenbank-Passwort
+admin.persistence.caption.poolpreparedstatements=F\u00FCr Pooling vorbereitete Anweisungen
 admin.persistence.caption.testonborrow=Verbindung testen beim Bezug aus dem Pool
 admin.persistence.caption.testonreturn=Verbindung testen bei R\u00FCckgabe in den Pool
 admin.persistence.caption.testwhileidle=Inaktive Verbindungen testen
@@ -149,6 +153,7 @@ admin.persistence.caption.whenexhaustedaction=Aktion, wenn Pool ersch\u00F6pft i
 admin.persistence.caption.whenexhaustedaction.block=Sperren
 admin.persistence.caption.whenexhaustedaction.fail=Fehler
 admin.persistence.caption.whenexhaustedaction.grow=Wachsen
+admin.persistence.help.maxopenpreparedstatements=Dieser Parameter hat nur dann eine Auswirkung, wenn vorbereitete SQL Anweisungen (engl. prepared SQL statements) per Pooling verwaltet werden.\r\nEin gr\u00F6\u00DFerer Wert verbessert die Performance aber verbraucht mehr Systemressouren und k\u00F6nnte im schlechtesten Fall Cursor einer Datenbankverbindung aufbrauchen. Jede Zahl kleiner oder gleich Null erlaubt die unbegrenzte Verwendung von vorbereiteten SQL Anweisungen.
 admin.persistence.help.minevictableidletime=Min. Wartezeit (in Sekunden) bevor inaktive Verbindungen aus dem Verbindungspool entfernt werden
 admin.persistencetype.database=Externe Datenbank
 admin.persistencetype.internal=Interne Datenbank
@@ -226,7 +231,7 @@ admin.vwiki.title.interwiki.update=Interwiki Links\u00E4ndern/l\u00F6schen
 admin.vwiki.title.namespace.add=Neuen Namensraum hinzuf\u00FCgen
 admin.vwiki.title.namespace.translations=Namensraum \u00DCbersetzungen
 admin.vwiki.title.select=Virtuelles Wiki ausw\u00E4hlen
-admin.vwiki.title.virtualwiki=Virtuelles Wiki hinzuf\u00FCgen/\u00E4ndern
+admin.vwiki.title.virtualwiki=Virtuelles Wiki hinzuf\u00FCfen/\u00E4ndern
 allcategories.title=Kategorien
 allfiles.title=Alle Dateien
 allimages.title=Alle Bilder
@@ -526,6 +531,7 @@ tab.common.move=Verschieben
 tab.common.print=Ausdrucken
 tab.common.special=Spezial
 tab.common.unwatch=Nicht mehr beobachten
+tab.common.viewsource=Quelltext anzeigen
 tab.common.watch=Beobachten
 topic.caption.editlegend=Editor
 topic.categories=Kategorien
@@ -593,6 +599,9 @@ usermenu.register=Registrieren
 usermenu.user={0}
 usermenu.usercomments=Benutzerdiskussion
 usermenu.watchlist=Beobachtungsliste
+viewsource.caption.legend=Wikitext f\u00FCr {0}
+viewsource.caption.overview=Der Wikitext f\u00FCr {0} wird weiter unten angezeigt. \r\nUm diese Seite zu editieren benutzen Sie bitte den "Seite bearbeiten" Reiter. Wenn kein "Seite bearbeiten" Reiter zur Verf\u00FCgung steht, haben Sie keine Berechtigungen um den aktuellen Artikel zu bearbeiten und Sie m\u00FCssen sich im Wiki anmelden. Falls Sie sich jedoch schon im Wiki angemeldet haben, sollten Sie beim Administrator die Berechtigung zur Bearbeitung des Artikels beantragen. 
+viewsource.title=Quelltext anzeigen f\u00FCr {0} 
 watchlist.caption.added=Der Artikel <b>{0}</b> wurde zu Ihrer Beobachtungsliste hinzugef\u00FCgt.
 watchlist.caption.empty=Es gibt keine Eintr\u00E4ge in Ihrer Beobachtungsliste.
 watchlist.caption.removed=Der Artikel <b>{0}</b> wurde aus Ihrer Beobachtungsliste entfernt.
